--- a/Omega/OmegaSPA/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Omega/OmegaSPA/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,8 +1,6 @@
 ﻿@model OmegaSPA.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Utilisez un autre service pour vous connecter.</h4>
-<hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
@@ -16,12 +14,18 @@
     else {
         using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl })) {
             @Html.AntiForgeryToken()
-            <div id="socialLoginList">
-                <p>
-                    @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Connexion avec votre compte @p.Caption">@p.AuthenticationType</button>
-                    }
-                </p>
+            <div id="StreamPanel">
+                <div id="socialLoginList">
+                    <p>
+                        @foreach (AuthenticationDescription p in loginProviders)
+                        {
+                            <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Connexion avec votre compte @p.Caption"></button>
+                        }
+                    </p>
+                </div>
+                @*<div id="FbPanel">
+                    </div>*@
+                <div id="hr"></div>
             </div>
         }
     }
