--- a/Omega/OmegaSPA/Content/Site.css
+++ b/Omega/OmegaSPA/Content/Site.css
@@ -1,53 +1,84 @@
-﻿
+﻿@font-face {
+	font-family: Montserrat-UltraLight;
+	src: url('../fonts/Montserrat-UltraLight.otf') format('opentype');
+}
+
+@font-face {
+	font-family: Montserrat-Light;
+	src: url('../fonts/Montserrat-Light.otf') format('opentype');
+}
+
+hr {
+     width : 1px;
+   height : 350px;
+   position:absolute;
+   margin-left:50%;
+   margin-top:2.5%;
+}
+body {
+    background-color: #F8F8F8;
+    height:100%;
+}
+#StreamPanel {
+  position: relative;
+  width: 80%;
+  height: 400px;
+  background: #E0E0E0;
+  box-shadow: 5px 5px 8px -2px rgba(0, 0, 0, 0.7); 
+  border-radius: 4px 4px 4px 4px;
+  margin-left: 10%;
+  text-align: center;
+  margin-top:8%;
+  }
 
 #Spotify{
     background-image:url("./img/spotifyConnect.png");
     height: 45px;
     width: 310px;
-
+}
+.Spotify{
+    margin-top:25%;
+    margin-left:8%;
+    position:absolute;
 }
 #Deezer{
-
     background-image:url("./img/deezerConnect.png");
     height: 45px;
     width: 310px;
 }
+.Deezer{
+    margin-top:30%;
+    position:absolute;
+    margin-left:8%;
+}
+
+
 #Facebook{
     background-image:url("./img/facebookConnect.png");
     height: 45px;
     width: 310px;
+    position:absolute;
+}
+.Facebook{
+    margin-top:28%;
+    position:absolute;
+    margin-left:62%;
+
 }
 
-/*#StreamPanel {
-  position:relative;
-  margin-top: 5%;
-  width: 80%;
-  height: 500px;
-  background-color: #E0E0E0;
-  box-shadow: 5px 5px 8px -2px rgba(0, 0, 0, 0.7); 
-  border-radius: 4px 4px 4px 4px;
-  margin-left:10%;
-  text-align: center;
+#pStream {
+    font-family:Montserrat-UltraLight;
+    font-size:20px;
+    width:40%;
+    position:absolute;
+    margin-left:4%;
+    margin-top:7%;
 }
-
-#hr{
-    border-left:  outset grey;
-    height:90%;
-    float:right;
-    margin-right:35%;
-    margin-top:-40%;
-}*/
-
-/*#FbPanel {
-  position:relative;
-  margin-top:2%;
-  margin-right:5%;
-  width: 450px;
-  height: 500px;
-  float: right;
-  background: #E0E0E0;
-  box-shadow: 5px 5px 8px -2px rgba(0, 0, 0, 0.7); 
-  border-radius: 4px 4px 4px 4px;
-  text-align: center;
-
-}*/
+#pFb {
+    font-family:Montserrat-UltraLight;
+    font-size:20px;
+    width:40%;
+    position:absolute;
+    margin-left:55%;
+    margin-top:7%;
+}
