--- a/Omega/OmegaSPA/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Omega/OmegaSPA/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -19,7 +19,7 @@
             @Html.AntiForgeryToken()
             <div id="StreamPanel">
                 <p id="pStream"> Connectez vos comptes  Spotify ou Deezer pour une expérience de fusion de playlists inédite </p>
-                <p id="pFb"> Connectez-vous à Facebook pour partagez la playlist avec un groupe ou lors d’un évènement sinon, commencez <a href="omega.itinet.fr/index.html">maintenant! </a>  </p>
+                <p id="pFb"> Connectez-vous à Facebook pour partagez la playlist avec un groupe ou lors d’un évènement sinon, commencez <a href="http://omega.itinet.fr/index.html">maintenant! </a>  </p>
                 <hr/>
                 <div id="socialLoginList">
                     <p>
